k8s/go-quiz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: go-quiz
  name: go-quiz
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: go-quiz
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./k8s
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: go-quiz
    spec:
      containers:
        - args:
            - -c
            - |
              while ! nc -vz mysqlsrv 3306; do
                echo "Waiting for mysql to start ..."
                sleep 1
              done && ./go-quiz --migrate && ./go-quiz
          image: go-quiz
          name: go-quiz
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
