k8s/mysqlsrv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqlsrv
  name: mysqlsrv
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysqlsrv
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./k8s
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: mysqlsrv
    spec:
      containers:
        - args:
            - --default-authentication-plugin=mysql_native_password
          image: mysql:8.0.21
          name: mysqlsrv
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql
      restartPolicy: Always
      volumes:
        - name: mysql
          persistentVolumeClaim:
            claimName: mysql
status: {}
